RESOLVED FIXED12043
Another assertion failure in WebCore::RenderObject::drawBorder
https://bugs.webkit.org/show_bug.cgi?id=12043
Summary Another assertion failure in WebCore::RenderObject::drawBorder
Mark Rowe (bdash)
Reported 2006-12-31 00:23:14 PST
<html> <head> <title>Test HTML Page</title> <style type="text/css"> button { -webkit-border-radius:926179103pt; } </style> </head> <body> <button>button</button> </body> </html> ASSERTION FAILED: x2 >= x1 (/Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderObject.cpp:1103 void WebCore::RenderObject::drawBorder(WebCore::GraphicsContext*, int, int, int, int, WebCore::RenderObject::BorderSide, WebCore::Color, const WebCore::Color&, WebCore::EBorderStyle, int, int)) Program received signal EXC_BAD_ACCESS, Could not access memory. Reason: KERN_INVALID_ADDRESS at address: 0xbbadbeef 0x01185586 in WebCore::RenderObject::drawBorder (this=0x18290c3c, graphicsContext=0xbfffd094, x1=1234905439, y1=10, x2=-1234905367, y2=12, s=WebCore::RenderObject::BSTop, c={static black = 4278190080, static white = 4294967295, static darkGray = 4286611584, static gray = 4288716960, static lightGray = 4290822336, static transparent = 0, m_color = 4290822336, m_valid = true}, textcolor=@0x170ef11c, style=WebCore::OUTSET, adjbw1=0, adjbw2=0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderObject.cpp:1103 1103 ASSERT(x2 >= x1); (gdb) bt #0 0x01185586 in WebCore::RenderObject::drawBorder (this=0x18290c3c, graphicsContext=0xbfffd094, x1=1234905439, y1=10, x2=-1234905367, y2=12, s=WebCore::RenderObject::BSTop, c={static black = 4278190080, static white = 4294967295, static darkGray = 4286611584, static gray = 4288716960, static lightGray = 4290822336, static transparent = 0, m_color = 4290822336, m_valid = true}, textcolor=@0x170ef11c, style=WebCore::OUTSET, adjbw1=0, adjbw2=0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderObject.cpp:1103 #1 0x011872e4 in WebCore::RenderObject::paintBorder (this=0x18290c3c, graphicsContext=0xbfffd094, tx=10, ty=10, w=52, h=22, style=0x170f1a5c, begin=true, end=true) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderObject.cpp:1323 #2 0x0115f3a7 in WebCore::RenderBox::paintBoxDecorations (this=0x18290c3c, paintInfo=@0xbfffc9f8, tx=10, ty=10) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBox.cpp:378 #3 0x011591df in WebCore::RenderBlock::paintObject (this=0x18290c3c, paintInfo=@0xbfffc9f8, tx=10, ty=10) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBlock.cpp:1351 #4 0x01166e90 in WebCore::RenderButton::paintObject (this=0x18290c3c, paintInfo=@0xbfffc9f8, tx=10, ty=10) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderButton.cpp:124 #5 0x01151e89 in WebCore::RenderBlock::paint (this=0x18290c3c, paintInfo=@0xbfffc9f8, tx=10, ty=10) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBlock.cpp:1285 #6 0x0129aa69 in WebCore::InlineBox::paint (this=0x18274cdc, paintInfo=@0xbfffca6c, tx=8, ty=8) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/InlineBox.cpp:139 #7 0x0129a5cb in WebCore::InlineFlowBox::paint (this=0x170fec5c, paintInfo=@0xbfffcb60, tx=8, ty=8) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/InlineFlowBox.cpp:583 #8 0x0129b56f in WebCore::RootInlineBox::paint (this=0x170fec5c, paintInfo=@0xbfffcb60, tx=8, ty=8) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RootInlineBox.cpp:136 #9 0x01174313 in WebCore::RenderFlow::paintLines (this=0x170ff29c, paintInfo=@0xbfffcd10, tx=8, ty=8) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderFlow.cpp:395 #10 0x0115925e in WebCore::RenderBlock::paintObject (this=0x170ff29c, paintInfo=@0xbfffcd10, tx=8, ty=8) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBlock.cpp:1367 #11 0x01151e89 in WebCore::RenderBlock::paint (this=0x170ff29c, paintInfo=@0xbfffcd10, tx=8, ty=8) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBlock.cpp:1285 #12 0x011521bf in WebCore::RenderBlock::paintChildren (this=0x1820b6cc, paintInfo=@0xbfffce64, tx=0, ty=0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBlock.cpp:1315 #13 0x01159280 in WebCore::RenderBlock::paintObject (this=0x1820b6cc, paintInfo=@0xbfffce64, tx=0, ty=0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBlock.cpp:1369 #14 0x01151e89 in WebCore::RenderBlock::paint (this=0x1820b6cc, paintInfo=@0xbfffce64, tx=0, ty=0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderBlock.cpp:1285 #15 0x01180a38 in WebCore::RenderLayer::paintLayer (this=0x1820c40c, rootLayer=0x1821fdfc, p=0xbfffd094, paintDirtyRect=@0xbfffd09c, haveTransparency=false, paintRestriction=WebCore::PaintRestrictionNone, paintingRoot=0x0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderLayer.cpp:1438 #16 0x01180bfc in WebCore::RenderLayer::paintLayer (this=0x1821fdfc, rootLayer=0x1821fdfc, p=0xbfffd094, paintDirtyRect=@0xbfffd09c, haveTransparency=false, paintRestriction=WebCore::PaintRestrictionNone, paintingRoot=0x0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderLayer.cpp:1463 #17 0x01180cc4 in WebCore::RenderLayer::paint (this=0x1821fdfc, p=0xbfffd094, damageRect=@0xbfffd09c, paintRestriction=WebCore::PaintRestrictionNone, paintingRoot=0x0) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/rendering/RenderLayer.cpp:1330 #18 0x010dfc7b in WebCore::Frame::paint (this=0x299cc40, p=0xbfffd094, rect=@0xbfffd09c) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/page/Frame.cpp:1041 #19 0x01100429 in -[WebCoreFrameBridge drawRect:] (self=0x299c7d0, _cmd=0x90aa2b6c, rect={origin = {x = 0, y = 0}, size = {width = 1415, height = 761}}) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebCore/page/mac/WebCoreFrameBridge.mm:480 #20 0x00341fbf in -[WebHTMLView drawSingleRect:] (self=0x1826cb80, _cmd=0x3c3308, rect={origin = {x = 0, y = 0}, size = {width = 1415, height = 761}}) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebKit/WebView/WebHTMLView.m:2678 #21 0x00342395 in -[WebHTMLView drawRect:] (self=0x1826cb80, _cmd=0x90aa2b6c, rect={origin = {x = 0, y = 0}, size = {width = 1415, height = 761}}) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebKit/WebView/WebHTMLView.m:2729 #22 0x932ee3b1 in -[NSView _drawRect:clip:] () #23 0x932ed40b in -[NSView _recursiveDisplayAllDirtyWithLockFocus:visRect:] () #24 0x0033bd2f in -[WebHTMLView(WebPrivate) _recursiveDisplayAllDirtyWithLockFocus:visRect:] (self=0x1826cb80, _cmd=0x90a83574, needsLockFocus=1 '\001', visRect={origin = {x = 0, y = 0}, size = {width = 1415, height = 761}}) at /Users/mrowe/Documents/Source/SVN/WebKit-Nightlies/WebKit/WebView/WebHTMLView.m:893 #25 0x932ff36f in _recursiveDisplayInRect2 () #26 0x9083af26 in CFArrayApplyFunction () #27 0x932ed613 in -[NSView _recursiveDisplayAllDirtyWithLockFocus:visRect:] () #28 0x932ff36f in _recursiveDisplayInRect2 () #29 0x9083af26 in CFArrayApplyFunction () #30 0x932ed613 in -[NSView _recursiveDisplayAllDirtyWithLockFocus:visRect:] () #31 0x932ec473 in -[NSView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] () #32 0x932ed041 in -[NSView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] () #33 0x932ed041 in -[NSView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] () #34 0x932ed041 in -[NSView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] () #35 0x932ed041 in -[NSView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] () #36 0x932ed041 in -[NSView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] () #37 0x932ebb78 in -[NSThemeFrame _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] () #38 0x932eb362 in -[NSView _displayRectIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:] () #39 0x932eac8e in -[NSView displayIfNeeded] () #40 0x932eaa32 in -[NSWindow displayIfNeeded] () #41 0x0001c394 in ?? () #42 0x9333ad6c in _handleWindowNeedsDisplay () #43 0x9082a155 in __CFRunLoopDoObservers () #44 0x908291f7 in CFRunLoopRunSpecific () #45 0x90828eb5 in CFRunLoopRunInMode () #46 0x92dcdb90 in RunCurrentEventLoopInMode () #47 0x92dcd1ce in ReceiveNextEventCommon () #48 0x92dcd0ee in BlockUntilNextEventMatchingListInMode () #49 0x9326f465 in _DPSNextEvent () #50 0x9326f056 in -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] () #51 0x00006f96 in ?? () #52 0x93268ddb in -[NSApplication run] () #53 0x9325cd2f in NSApplicationMain () #54 0x0005f7de in ?? () #55 0x0005f6f9 in ?? () (gdb)
Attachments
Fix border radius sanity checks (34.32 KB, patch)
2006-12-31 09:57 PST, mitz
sam: review+
mitz
Comment 1 2006-12-31 09:57:16 PST
Created attachment 12135 [details] Fix border radius sanity checks
Sam Weinig
Comment 2 2007-01-04 14:28:57 PST
Comment on attachment 12135 [details] Fix border radius sanity checks r=me
Mark Rowe (bdash)
Comment 3 2007-01-04 16:52:46 PST
Landed in r18602.
Note You need to log in before you can comment on or make changes to this bug.