2007-01-04  Mitz Pettel  <mitz@webkit.org>

Reviewed by Sam Weinig.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12043
          Another assertion failure in WebCore::RenderObject::drawBorder

        Test: fast/borders/border-radius-huge-assert.html

        * platform/graphics/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::addRoundedRectClip): Fixed the check for border radii
        that do not fit in the given width or height to work with radii that sum up to
        more than MAX_INT.
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::paintBorder): Ditto.

2007-01-04  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Sam Weinig.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=12043
          Another assertion failure in WebCore::RenderObject::drawBorder

        * fast/borders/border-radius-huge-assert-expected.checksum: Added.
        * fast/borders/border-radius-huge-assert-expected.png: Added.
        * fast/borders/border-radius-huge-assert-expected.txt: Added.
        * fast/borders/border-radius-huge-assert.html: Added.


Canonical link: https://commits.webkit.org/15628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18602 268f45cc-cd09-0410-ab3c-d52691b4dbfc